--- a/index.html
+++ b/index.html
@@ -67,13 +67,37 @@ window.onload = wrap_img;
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><p>This site is built with <a href="https://github.com/fastai/fastpages">fastpages</a>, An easy to use blogging platform with extra features for Jupyter Notebooks.</p>
+        <div class="home"><h1 id="welcome-to-kiit-ai-society">Welcome to KIIT AI Society</h1>
 
-<p><img src="/kiitai.github.io/images/diagram.png" alt="" title="https://github.com/fastai/fastpages" /></p>
+<p>We are a driven bunch. We are passionate about different domains of Artificial Intelligence and work on projects and research. If you are sick of same old tutorials and want to get your hands dirty.</p>
 
-<p><a href="https://github.com/fastai/fastpages">fastpages</a> automates the process of creating blog posts via GitHub Actions, so you don’t have to fuss with conversion scripts.  A full list of features can be found on <a href="https://github.com/fastai/fastpages">GitHub</a>.</p>
+<h1 id="latest">Latest</h1>
+<ul>
+  <li>We are set to organize a meetup with School of AI, Bhubaneswar this month.</li>
+  <li>The paper “Deep Learning with Neural Networks has been published on Global Scientific Journals, Volume 6, Issue 12 December 2018 edition.</li>
+  <li>Two original research papers have been presented at the 3rd International Conference on Smart Computing &amp; Informatics (SCI) 2018 in December for publication in Springer SIST.</li>
+  <li>Two research papers have been published in IEEE Explore by our members after presentation at ICICT 2018, Coimbatore.</li>
+</ul>
 
-<p>You can edit the <code class="language-plaintext highlighter-rouge">index.html</code> file to change this content.</p>
+<h1 id="our-awesome-team">Our Awesome Team</h1>
+
+<div style="border: 1px">
+    <span>
+        <img src="/assets/images/bando.jpg" width="100" height="100" />
+        <p>Ritwik Bandhopay</p>
+    </span>
+    <span>
+        <img src="/assets/images/soham.jpg" width="100" height="100" />
+        <p>Soham Pathak</p>
+    </span>
+    <span>
+        <img src="/assets/images/aniket.jpg" width="100" height="100" />
+        <p>Aniket Maurya</p>
+    </span>
+    <span>
+        <img src="/assets/images/bando.jpg" width="100" height="100" /><p>Ritwik</p>
+    </span>
+</div>
 
 <h1 id="posts">Posts</h1>
 
